--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,5 +25,15 @@ spring:
         trace: false
         web-allow-others: false
 
+  ai:
+    oci :
+      genai :
+        private-key: ${GOOGLE_AI_API_KEY}
+        cohere:
+          chat:
+            options:
+              model: gemini-3.0-flash
+              temperature: 0.7
+
 server:
   port: 8080
